// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Portfolio grouped networks > should apply ledger import 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="relative flex cursor-pointer items-center justify-center py-2 font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:[&[data-focus-visible-added]]:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="sliders-vertical"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div
            aria-describedby="tippy-7"
          >
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div>
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="ledger"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="arrow-turn-down-bracket"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                        />
                        <path
                          d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="plus"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 10h18M10 1v18"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="plus"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="rounded-lg border-solid border-theme-secondary-300 text-center leading-5 text-theme-secondary-text dark:border-theme-secondary-800 sm:border sm:p-6 mx-8 mt-2 sm:-mt-1 md:mx-0 md:mb-3"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any wallets matching the selected networks.
      </div>
    </div>
    <div
      class="flex flex-col gap-x-3 border-b border-theme-secondary-300 duration-200 dark:border-theme-secondary-800 dark:bg-theme-background md:mb-4 md:rounded-xl md:border-0 ring-theme-secondary-300 dark:ring-theme-secondary-800 md:ring-1 transition-all"
    >
      <div
        class="flex h-20 items-center px-8 py-4 md:px-4"
        data-testid="WalletsGroupHeaderSkeleton"
      >
        <div
          class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
        />
        <div
          class="grow justify-between space-x-3 px-3 py-3"
        >
          <h1
            class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
            data-testid="header__title"
          >
            Cryptoasset
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Balance
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Currency
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </div>
        <div
          class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
        >
          <div
            class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-down-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks > should render list 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="relative flex cursor-pointer items-center justify-center py-2 font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:[&[data-focus-visible-added]]:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="sliders-vertical"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div>
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="ledger"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="arrow-turn-down-bracket"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                        />
                        <path
                          d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="plus"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 10h18M10 1v18"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="plus"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="rounded-lg border-solid border-theme-secondary-300 text-center leading-5 text-theme-secondary-text dark:border-theme-secondary-800 sm:border sm:p-6 mx-8 mt-2 sm:-mt-1 md:mx-0 md:mb-3"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any wallets matching the selected networks.
      </div>
    </div>
    <div
      class="flex flex-col gap-x-3 border-b border-theme-secondary-300 duration-200 dark:border-theme-secondary-800 dark:bg-theme-background md:mb-4 md:rounded-xl md:border-0 ring-theme-secondary-300 dark:ring-theme-secondary-800 md:ring-1 transition-all"
    >
      <div
        class="flex h-20 items-center px-8 py-4 md:px-4"
        data-testid="WalletsGroupHeaderSkeleton"
      >
        <div
          class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
        />
        <div
          class="grow justify-between space-x-3 px-3 py-3"
        >
          <h1
            class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
            data-testid="header__title"
          >
            Cryptoasset
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Balance
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Currency
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </div>
        <div
          class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
        >
          <div
            class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-down-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks > should render without testnet wallets 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="relative flex cursor-pointer items-center justify-center py-2 font-semibold text-theme-secondary-700 transition-colors duration-200 focus:outline-none disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:text-theme-secondary-500 disabled:dark:text-theme-secondary-700 hover:border-b-theme-primary-400 [&.active]:border-b-theme-primary-600 [&.active]:text-theme-primary-600 [&.active]:[&[data-focus-visible-added]]:rounded hover:text-theme-primary-400 mx-0.5 px-2.5 ring-focus"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="sliders-vertical"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div>
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="ledger"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="arrow-turn-down-bracket"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                        />
                        <path
                          d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="plus"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 10h18M10 1v18"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="plus"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="rounded-lg border-solid border-theme-secondary-300 text-center leading-5 text-theme-secondary-text dark:border-theme-secondary-800 sm:border sm:p-6 mx-8 mt-2 sm:-mt-1 md:mx-0 md:mb-3"
      data-testid="EmptyBlock"
    >
      <div>
        You don't have any wallets matching the selected networks.
      </div>
    </div>
    <div
      class="flex flex-col gap-x-3 border-b border-theme-secondary-300 duration-200 dark:border-theme-secondary-800 dark:bg-theme-background md:mb-4 md:rounded-xl md:border-0 ring-theme-secondary-300 dark:ring-theme-secondary-800 md:ring-1 transition-all"
    >
      <div
        class="flex h-20 items-center px-8 py-4 md:px-4"
        data-testid="WalletsGroupHeaderSkeleton"
      >
        <div
          class="flex h-11 w-11 shrink-0 flex-row items-center justify-center -space-x-1 rounded-xl bg-theme-background bg-clip-padding text-theme-secondary-100 ring-1 ring-theme-secondary-300 dark:bg-theme-background dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
        />
        <div
          class="grow justify-between space-x-3 px-3 py-3"
        >
          <h1
            class="mb-0 text-lg text-theme-secondary-700 dark:text-theme-secondary-700"
            data-testid="header__title"
          >
            Cryptoasset
          </h1>
        </div>
        <div
          class="flex space-x-3"
        >
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Wallets
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Balance
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
          >
            <span
              class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
            >
              Total Currency
            </span>
            <span
              class="text-lg text-theme-secondary-600 dark:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </div>
        <div
          class="flex h-full items-center border-theme-secondary-300 pl-4 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
        >
          <div
            class="flex h-8 w-8 content-center items-center justify-center rounded-lg bg-theme-background text-theme-secondary-500 ring-1 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
          >
            <div>
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-down-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
